Added in a few more AUXCs. Not many to go

--- a/index.html
+++ b/index.html
@@ -269,6 +269,30 @@
             frequencies to use with VARA FM, hooking up my equipment (basic,
             basic!), saving communications to a global file immediately,
             transferring a picture to my computer, image sizing.</p>
+
+            <p>I feel most comfortable with using Winlink Express as an
+            alternative to normal internet email. I try to use WE as an
+            alternative when emailing other ham radio operators for the purpose
+            of gaining experience. I am also comfortable using the ICS-213 form
+            since it is often included in CARES and YCARES Weekly Winlink
+            assignments.</p>
+
+            <p>Download/create messages, reply/open attachments; send/resize,
+            attach ICS forms; use Telnet, use RMS (less successfully), Tactical
+            names, folder setup.</p>
+
+            <p>Aspects of Winlink Express that I am most comfortable with: The
+            tasks that we typically work on during a six week cycle I am
+            comfortable with. If individuals participate in these activities
+            regularly, an operational competence is easily within a 2 - 3 cycle
+            range</p>
+
+            <p>ICS Forms, NET Control, Global Forms, Tactical Address</p>
+
+            <p>"Standard" forms, editing, attaching photos, basic GPS operation,
+            and pulling forms from the catalog. I feel comfortable with these
+            tasks because we've practiced them on a regular basis and formed a
+            certain familiarity.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -390,6 +414,30 @@
             of the nifty tools in Winlink to gather data like weather, and a
             whole lot more. For week 151 I ended up trying 2 ways--a scanner and
             my camera; not happy.</p>
+
+            <p>It would be helpful to become acquainted with any other ICS forms
+            that are typically used in an event by including them in various
+            Winlink Weekly Net exercises. Overall, however there are WAY TOO MAY
+            FORMS! SHEESH!</p>
+
+            <p>Better use of RMS (as time allows), converting word docs to .txt</p>
+
+            <p>Aspects that I could use additional exposure to: Basics that I
+            don't normally think about, and their shelf life has expired in my
+            brain (e.g., terminology, settings in Winlink Express, Vara FM,
+            Soundmodem, etc. - my gear is set up, but if Mr. Buzz needs help I
+            can't whip through this stuff as quickly as you did last Saturday).
+            - Features / Forms / etc. that we might be called upon to use in our
+            service to the City of LO or Clackamas County. Fun stuff in the
+            Winlink Library like Mean High / Mean Low Tide at the Burnside
+            Bridge on Friday.</p>
+
+            <p>Continued work on archiving messages, Tracking position reports</p>
+
+            <p>Finding RMS stations outside of my local area quickly. Adjusting
+            settings to optimize speed and through put. Better understanding
+            what our served agency expects from us and Winlink. Using multi
+            computers and accessing past messages in different instances.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -466,7 +514,23 @@
             like the feedback! And this time each week you have given us just
             one more thing.... Excellent.</p>
 
-            <p></p>
+            <p>The current format of this training net is exceptional since it
+            requires participants to use Winlink Express to retrieve and submit
+            exercises using Winlink Express. The more we use it, the more
+            comfortable we will be with it during a real event.</p>
+
+            <p>Wordy instructions vs. bullet points. I default to printing out
+            instructions to prevent having open multiple windows.</p>
+
+            <p>No complaints. The six week cycle / easy to capstone project was
+            genius!</p>
+
+            <p>Get people out of their comfort zone and challenge them with the
+            material.</p>
+
+            <p>The good has been that it's forcing me to stay more familiar with
+            WLE. The bad has been that I realize how powerful WLE and how little
+            I know about it.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -521,6 +585,22 @@
 
             <p>I absolutely cannot consider being a control operator for this
             net. I do not know the information well enough.</p>
+
+            <p>Not yet. Need more training first.</p>
+
+            <p>Not at this time. Too much else going on in my/our lives. Kudos to those who are NCO.</p>
+
+            <p>If you can tolerate me, I'm willing to pilot the ship when asked.
+            Sometimes the greatest help I can provide is to shut up and sit down
+            - there is a fine line between helping out and gett'n in the way. My
+            preference would be to limit my time as NCS to two six week cycles
+            per year. As always, I welcome your input as I navigate my six week
+            cycle.</p>
+
+            <p>I will do more Net Control.</p>
+
+            <p>I'm not yet ready to take on the role of Control Operator. I'm
+            still very much a student, but won't say never, just not yet.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -592,6 +672,26 @@
             <p>This one is a blank. I enjoy it, I learn each week, I feel a
             sense of accomplishment, and don't know exactly what I don't know.
             Thanks for asking these questions.</p>
+
+            <p>Never assume the Winlink operator is computer savvy,
+            within/without Winlink.</p>
+
+            <p>I don't know what I don't know. Your experience with different
+            deployments, as a volunteer in supporting activities outside of LO
+            ARES or CARES really helps explain why it is important to be in
+            command of certain skills. Any direction that you might provide
+            regarding activities outside of LO ARES, CARES, or other Winlink
+            Nets in which I participate would be welcomed.</p>
+
+            <p>N/A</p>
+
+            <p>The stress aspect of a real event and the portable operating in
+            less than ideal conditions. Having to figure it out on the fly when
+            you haven't yet learned the skills or understand the "proper" way.
+            I've used the analogy before of "turning my homework in with red
+            crayon" because I wasn't yet skilled enough to do it right. It may
+            be interesting to have more assignments that give us a task but have
+            little to no instructions on how to achieve the task.</p>
         </div>
     </body>
 </html>
