All AUXCs comments added

--- a/index.html
+++ b/index.html
@@ -293,6 +293,43 @@
             and pulling forms from the catalog. I feel comfortable with these
             tasks because we've practiced them on a regular basis and formed a
             certain familiarity.</p>
+
+            <p>create simple message, locate frequency, ping for viability, send
+            message, create folders, move msgs between folders, move pics from
+            phone to computer with cable, sizing pics on winlink. Learned on my
+            own with weekly exercise, lots of trial and error, but will remember
+            and learn from mistakes.</p>
+
+            <p>Basic Winlink GPS: changing my location manually, using a
+            external gps, opening the map of received messages. Because I have
+            had to do it a bunch taking my setup to another location or used it
+            portable.</p>
+            <p>Forming messages, using common forms. Because we practice this
+            with this net, so repetition.</p>
+            <p>Using the Winlink size adjuster, adding attachments. Same,
+            because I have practiced by participating in the net.</p>
+            <p>Vara FM: selecting rms from the list, changing soundcard
+            interfaces. I know I don't know it all, but I feel pretty good being
+            able to use 2 different sound card interfaces at 2 different
+            locations, with multiple radios and change the necessary Vara
+            settings.</p>
+
+            <p>Creating, Sending, Receiving, Forwarding, Replying, import and
+            export messages as well as us 'Move To:' to move messages to
+            different folders</p>
+            <p>Using Personal and Global Folders and creating contacts with
+            aliases and Group Addresses.</p>
+            <p>Creating and using Auxiliary Callsigns and Tactical Addresses as
+            well have done Digipeater.</p>
+            <p>Entering Grid Square, Specified coordinates as well how to setup
+            and us GPS/Position Report with my GPS dongle</p>
+            <p>Most of the Open Session modes including Telnet, Packet, Vara FM,
+            all three with P-P mode, as well as Radio-only mode and Telnet Post
+            Office (also on ARDEN)</p>
+            <p>Also used and built Forms and Templates, used the web version of
+            Winlink and much more WHY? I have many years of experience using and
+            helping others with WinLink and being a HW/SW Engineer I pick up
+            skills quickly.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -438,6 +475,22 @@
             settings to optimize speed and through put. Better understanding
             what our served agency expects from us and Winlink. Using multi
             computers and accessing past messages in different instances.</p>
+
+            <p>Adding forms, completing all blocks of forms with correct data.</p>
+
+            <p>Things to work on are general computer things: like finding
+            files, working with the importing photos or files. Winlink things:
+            understanding better how to find or update the RMS list without
+            internet, or have it adjust the list by location when you have
+            moved. Use other modes more, like Packet, but that's my fault for
+            not trying it more and just using Vara.</p>
+
+            <p>Probably could use more experience in FORMS and TEMPLATES</p>
+            <p>Need to get my IC-751 HF rig setup for data and use WinLink on
+            the HF side (have only used others HF radios).</p>
+            <p>Also want to get and learn how to deploy a Digirig and use it in
+            my car. I have built and use a Master Communication DR70 and have
+            several SignalLinks.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -531,6 +584,20 @@
             <p>The good has been that it's forcing me to stay more familiar with
             WLE. The bad has been that I realize how powerful WLE and how little
             I know about it.</p>
+
+            <p>Good: Learn by doing real world project examples. Very important
+            to do work every week to be proficient and keep participants sharp
+            and ready to go when assigned.</p>
+
+            <p>I like the format and variety that changing net controllers
+            brings.</p>
+
+            <p>For me the timing is odd with starting on a Wednesday and Ending
+            on Monday but that is the way it is. By the time I get around to
+            doing the assignment it usually ends up late Sunday or Monday if I'm
+            not all ready swamping with a lot of other activities. The good
+            thing is there is a lot variety and good opportunity to practice
+            skills and pick up a few new hints along the way.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -601,6 +668,23 @@
 
             <p>I'm not yet ready to take on the role of Control Operator. I'm
             still very much a student, but won't say never, just not yet.</p>
+
+            <p>Not right now for control operator or shadow. Just started
+            Winlink with week 147. Need more practice and experience with
+            various scenarios and using features of Winlink. Do not know enough
+            right now to create scenarios and use all features of Winlink.</p>
+
+            <p>No. Maybe shadow. I don't feel like I have time to dedicate
+            consistently to be a reliable and engaged net control or be creative
+            in the content. Mine would be a basic, minimal net, of course I say
+            that and then I would probably come up with enough if I had enough
+            time to plan ahead of time.</p>
+
+            <p>Would you like to have a go at being the control operator for
+            this net? If you don't think you could manage it yourself, then
+            would you consider shadowing a more experienced operator? Not really
+            right now, have too many other irons in the fire and can barely work
+            this training into my schedule.</p>
         </div>
 
         <div class="auxc-checkin" id="AUXC_CALLSIGN">
@@ -692,6 +776,24 @@
             crayon" because I wasn't yet skilled enough to do it right. It may
             be interesting to have more assignments that give us a task but have
             little to no instructions on how to achieve the task.</p>
+
+            <p>Lots I don't know. Really need to hit every button and item
+            within Winlink program and determine its reason and usefulness.</p>
+
+            <p>I suppose you are having us use and learn what we will use and
+            need to know as AUXCs, but I am a curious person and like to know
+            how stuff works and more details, so there's lots to Winlink I feel
+            like I don't know but not necessarily that it needs added to the
+            net. There is something to not knowing what you don't know. I'm
+            curious about RMSs, more forms and who would send them, lots more
+            but it is getting late and I'm losing it.</p>
+
+            <p>We could us P2P and have volunteers leave there station up and
+            also throw in some Digipeater stations. I helped Washington County
+            ARES for a week when they were training and gave them a farther
+            outpost digipeater to play with.</p>
+            <p>Possibly have a one off have users go and use WinLink on HF for RMS and P2P.</p>
+            <p>CARES could also use more training in creating Forms and Templates</p>
         </div>
     </body>
 </html>
