Better messaging about the responses and their formatting.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
         <h2>Responses to the questions</h2>
-        <p>The responses are presented in sequence by the question</p>
+        <p>The responses are presented in no specific order and are cut/pasted from your check-in messages. I've not edited the content, but I may have reformatted slightly.</p>
         
         <div class="question-responses" id="question-one">
             <p class="question-title">
