Changed the ul li bullets to double chevron right and coloured them using firebrick.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
             .response li {
                 padding-bottom: 0.5rem;
             }
+
+            ul li::marker {
+                content: "» ";
+                color: firebrick;
+                font-size:1.2em;
+            }
         </style>
     </head>
 
