Put a comment in with a border change should it be needed to be made visible for debugging.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
             .response li {
                 padding-bottom: 0.5rem;
+                /* border: thin solid red; */
             }
 
             ul li::marker {
