--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Andrew Watson">
-        <title>CARES Winlink Net Week 151 checkins</title>
+        <title>CARES Winlink Net Week 152 checkins</title>
 
         <style>
             :root {
@@ -51,7 +51,8 @@
             }
 
             div {
-                border-radius: 0.5rem;
+                font-size: 1rem;
+                border-radius: 0.5em;
                 margin-bottom: 0.5em;
                 padding-left: 1em;
                 padding-right: 1em;
